added validatio as per feedback
